--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -56,3 +56,33 @@
 .btn-primary:hover {
   background-color: green;
 }
+
+@media (min-width:350px) and (max-width:1200px){
+  .hero-content {
+  margin-top: 150px;
+
+}
+
+.hero-content h1 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+.hero-content p {
+  font-size: 0.8rem;
+  margin-bottom: 15px;
+
+  
+}
+.btn-primary {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 6px 12px;
+  border-radius: 6px;
+  font-size: 1rem;
+  
+}
+
+  
+
+
+}
