--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -47,3 +47,33 @@ body {
   font-weight: bold;
   border-bottom: 2px solid #1e90ff;
 }
+
+@media(min-width:350px) and (max-width:1400px){
+  
+  .navbar {
+  max-height: 10vh;
+  max-width: 100vw;  
+  padding: 1rem 1rem;
+  
+
+}
+
+.logo {
+ 
+  font-size: 1.0rem;
+  font-weight: 500;
+  margin-top: 1.2rem;
+}
+.nav-links {
+  gap: 1rem;
+ 
+}
+
+.nav-links a {
+ 
+  font-size: 0.5rem;
+  
+}
+
+
+}
