--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -14,6 +14,7 @@
 }
 
 .services-heading {
+  
   text-align: center;
   color: #2980b9;
   margin-bottom: 10px;
@@ -50,8 +51,26 @@
     font-weight: 400;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 350px) and (max-width:1200px){
   .services-list {
     grid-template-columns: repeat(2, 1fr);
   }
+  .services-heading {
+  font-size:1.2rem ;
+ 
+}
+.services-intro {
+  
+  font-size: 0.8rem;
+  
+}
+.service-item h3 {
+  font-size: 0.9rem;
+ 
+}
+.service-item p{
+    font-size: 0.8rem;
+   
+}
+
 }
